# comp426-final-citygen

./: README.md
backend/: .dockerignore  .env.docker.sample  .env.sample  .gitignore  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __main__.py  application.py  auth.py  db.py  mail.py  settings.py  test.py  util.py
backend/app/api/: __init__.py  auth_router.py  map_router.py  user_router.py
backend/app/exceptions/: __init__.py  map.py  user.py
backend/app/models/: __init__.py  auth_token.py  map.py  map_favorite.py  thumbnail.py  user.py  user_avatar.py
backend/app/repositories/: __init__.py  avatar_repository.py  map_favorite_repository.py  map_repository.py  thumbnail_repository.py  user_repository.py
backend/app/schemas/: __init__.py  map.py  thumbnail.py  user.py  user_avatar.py
backend/migrations/: env.py
backend/migrations/versions/: 2024-12-02_add_user_and_token_table.py  2024-12-04_add_map_table.py  2024-12-05_add_avatar_table.py  2024-12-05_add_last_played_at_col_to_map.py  2024-12-05_add_mimetype_to_thumb_avatar.py  2024-12-05_add_thumbnail_table.py  2024-12-08_add_map_favoriting.py
backend/postgres-data/base/13780/: 1247  1249  1259  16384  16387  16389  16390  16395  16396  16398  16400  16412  16415  16415_fsm  16415_vm  16416  16417  16429  16432  16433  16434  16437  16437_fsm  16438  16439  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  (+26 more)
backend/postgres-data/global/: 1260  pg_control  pg_internal.init
backend/postgres-data/pg_stat/: db_0.stat  db_13780.stat  global.stat
backend/postgres-data/pg_xact/: 0000
webapp/: craco.config.js  package-lock.json  package.json  tsconfig.json
webapp/public/: index.html  manifest.json
webapp/src/: App.css  App.js  index.css
webapp/src/MapGenerator/src/: main.ts
webapp/src/api/: api.ts
webapp/src/components/: info-tooltip.tsx  protected-route.tsx
webapp/src/components/main-menu/: header.css  header.tsx
webapp/src/contexts/: api-context.tsx  index.ts
webapp/src/views/: account-page.css  account-page.tsx  credits-page.tsx  error-page.tsx  index.ts  login-page.css  login-page.tsx  main-menu.tsx  map-select.css  map-select.tsx
(+35 files in other folders)
